2005-12-13  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/list.h :
	* lib/list.cpp :

	  - Added add() and del() functions in vlad_list. These functions take
	    vlad_list parameters.

	  - Added a default copy() function in vlad_list_item that is used by
	    the above add() function to duplicate the item. This copy()
	    function, of course, should be overridden by any child class that
	    uses the above add() function.

2005-12-12  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* configure :
	* configure.ac :

	  - Removed -Wstrict-prototypes from CXXFLAGS.

	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :

	  - Added a vreplace() function to replace and verify.

	  - Some minor cleanup.

	* lib/symtab.cpp :
	* lib/symtab.h :

	  - Added a function that will give a list of tuples of entities that
	    match a given list of variables for grounding.

	* lib/stringlistlist.cpp :

	  - get() will now first get a vlad_list_item then dynamic_cast that
	    into a vlad_stringlist.

	* lib/stinglist.cpp :
	* lib/stringlist.h :

	  - Added a copy() function.

	  - Added an m_uniq to keep track of whether we are keeping a unique
	    list or not. This is safer than making vlad_list::m_uniq pubic or
	    protected.

	  - Made get(const char *, unsigned int &) fail if m_uniq is true.

	  - Added a stringlist constructor for creating a stringlist where
	    duplicates are allowed.

	* Merged with vlad-1_2_2

2005-12-11  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagging vlad-1_2_2

	* lib/identifier.h :

	  - Fixed error in the VLAD_IDENT_IS_*() macros.

2005-12-11  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* samples/docrel.vla :
	* samples/docrel.vlp :

	  - Fixed error in the ordering of parameters in the updates.

	* lib/seqtab.cpp :

	  - verify() function now checks whether the replacement identifier
	    is compatible with the variable to be replaced.

	* lib/identifier.h :
	* lib/identifier.cpp :
