@@ -40,11 +40,22 @@ int vlad_varlist::add(const char *a_var)
   return vlad_stringlist::add(a_var);
 }
 
+/* add the contents of the given list to this list */
+int vlad_varlist::add(vlad_varlist *a_vlist)
+{
+  return vlad_list::add(dynamic_cast<vlad_list *>(a_vlist));
+}
+
+/* delete all items that matches the items in the given list */
+int vlad_varlist::del(vlad_varlist *a_vlist)
+{
+  return vlad_list::del(dynamic_cast<vlad_list *>(a_vlist), true);
+}
+
 /* copy varlist */
 int vlad_varlist::copy(vlad_varlist **a_vlist)
 {
   int retval;
-  unsigned int i;
 
   if (a_vlist == NULL)
     return VLAD_NULLPTR;
@@ -52,16 +63,9 @@ int vlad_varlist::copy(vlad_varlist **a_vlist)
   if ((*a_vlist = VLAD_MEM_NEW(vlad_varlist())) == NULL)
     return VLAD_MALLOCFAILED;
 
-  for (i = 0; i < vlad_list::length(); i++) {
-    char *var;
-
-    if ((retval = get(i, &var)) != VLAD_OK)
-      return retval;
-
-    if ((retval = (*a_vlist)->add(var)) != VLAD_OK) {
-      VLAD_MEM_DELETE(*a_vlist);
-      return retval;
-    }
+  if ((retval = (*a_vlist)->vlad_list::add((vlad_list *) this)) != VLAD_OK) {
+    VLAD_MEM_DELETE(*a_vlist);
+    return retval;
   }
 
   return VLAD_OK;
