@@ -1,5 +1,15 @@
 2005-12-13  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
+	* lib/stringlist.cpp :
+	* lib/stringlist.h :
+	* lib/varlist.cpp :
+	* lib/varlist.h :
+
+	  - Added new add() and del() functions that take lists instead of
+	    variables and strings.
+
+	  - redefined copy() by using the new vlad_list::add() function.
+
 	* lib/list.h :
 	* lib/list.cpp :
 
